Implemented alpha version of DataGrid virtualization - works but needs better handling - seems to work better with wheelroll than wheelpress.

--- a/src/app/modules/inquiry/inquiry.component.html
+++ b/src/app/modules/inquiry/inquiry.component.html
@@ -1,4 +1,5 @@
 <div class="layout-root">
+    <sm-wait-indicator [isVisible]="isWaitIndicatorVisible"></sm-wait-indicator>
     <div class="ribbon-container">
         <sm-ribbon [commands]="commands$">
         </sm-ribbon>
