--- a/src/app/modules/inquiry/inquiry.component.html
+++ b/src/app/modules/inquiry/inquiry.component.html
@@ -1,5 +1,9 @@
 <div class="layout-root">
     <sm-wait-indicator [isVisible]="isWaitIndicatorVisible"></sm-wait-indicator>
+    <sm-modal [isVisible]="dlgTrigger === 'dlgHelp'" title="Help"
+    (modalResult)="onModalResultResolved($event)">
+    <div>test</div>
+</sm-modal>
     <div class="ribbon-container">
         <sm-ribbon [commands]="commands$">
         </sm-ribbon>
