--- a/src/app/shared/data-grid/data-grid.component.html
+++ b/src/app/shared/data-grid/data-grid.component.html
@@ -12,8 +12,7 @@
                 <tr *ngFor="let item of virtualizedItemsSource | async; let index = index;"
                     (click)="onSelectedItemsChanged($event, item, item.index)"
                     (mouseover)="onSelectionPending($event, item, item.index)"
-                    [ngClass]="{backward: index === 3, forward: index === 30, selected: item.isSelected === true}"
-                    (visibilityChanged)="onVisible($event)" >
+                    [ngClass]="{backward: index === 3, forward: index === 30, selected: item.isSelected === true}">
                     <td class="normalizedCell">[{{item.index}}]</td>
                     <td *ngFor="let f of item.rowData.keys()">
                         <span class="normalizedCell">
