--- a/src/app/shared/data-grid/data-grid.component.html
+++ b/src/app/shared/data-grid/data-grid.component.html
@@ -1,5 +1,5 @@
 <div class="layout-root">
-    <span class="label">Result set</span>
+    <span *ngIf="columnsSource | async" class="label">Result set</span>
     <div class="table-container" (scroll)="onScroll($event)">
         <table>
             <thead>
