Revamped change detection to be invoked by BindableBase - seems more controllable.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,7 +19,7 @@
       </select>
     </div>
   </sm-modal>
-  <sm-wait-indicator [isVisible]="isBusy() | async">
+  <sm-wait-indicator [isVisible]="isBusy()">
   </sm-wait-indicator>
   <div class="titleBar-container">
     <div class="title">
