Batch += more precise script syntax correction. EditorComponent += editValue fixes && tab key override.

--- a/src/app/viewAPI/editor/editor.component.html
+++ b/src/app/viewAPI/editor/editor.component.html
@@ -1,5 +1,8 @@
 <div class="container">
     <div class="label">Query</div>
-    <textarea class="editor" (input)="onTextInput($event)" (load)="onEditorLoad($event)">
+    <textarea class="editor" 
+    (input)="onTextInput($event)" 
+    (keydown)="onKeyDown($event)"
+    #editor>
     </textarea>
 </div>
