Further improvements on multiple statement handling. Selected tab item not behaving perfectly after next query.

--- a/src/app/viewAPI/tabbed-group/tabbed-group.component.html
+++ b/src/app/viewAPI/tabbed-group/tabbed-group.component.html
@@ -1,5 +1,6 @@
 <div class="container">
-    <span tabIndex="{{i}}" class="header" *ngFor="let caption of headersSource | async; let i = index" 
+    <span class="header" *ngFor="let caption of headersSource | async; let i = index" 
+    tabIndex="{{i}}" 
     (click)="onHeaderClick($event, i)"
-    (show)="onHeaderLoaded($event)">Rows: {{caption}}</span>
+    [ngClass]="{selected: i === 0}" #header>Rows: {{caption}}</span>
 </div>
