Batch: implemented statement correction mechanism - more precise single statement recognition.

--- a/src/app/viewAPI/tabbed-group/tabbed-group.component.html
+++ b/src/app/viewAPI/tabbed-group/tabbed-group.component.html
@@ -1,5 +1,5 @@
 <div class="container">
     <span class="header" *ngFor="let caption of headersSource | async; let i = index" tabIndex="{{i}}"
-        (click)="onHeaderClick($event, i)" [ngClass]="{selected: i === 0}" [toolTip]="timeStamp?.toString()"
+        (click)="onHeaderClick($event, i)" [ngClass]="{selected: i === 0}" [toolTip]="'Data acquired:' + timeStamp?.toString()"
         #header>Rows: {{caption}}</span>
 </div>
