--- a/src/app/viewAPI/tabbed-group/tabbed-group.component.css
+++ b/src/app/viewAPI/tabbed-group/tabbed-group.component.css
@@ -44,6 +44,7 @@
 .add:hover,
 .remove:hover {
     color: lightgray;
+    cursor: pointer;
 }
 
 .caption:hover {
@@ -55,6 +56,7 @@
 .button-group {
     display: flex;
     flex-direction: column;
+    margin-left: 5px;
 }
 
 .selected {
