--- a/src/app/viewAPI/editor/editor.component.html
+++ b/src/app/viewAPI/editor/editor.component.html
@@ -1,8 +1,8 @@
 <div class="container">
-    <div class="label">Query</div>
     <textarea class="editor" 
     (input)="onTextInput($event)" 
     (keydown)="onKeyDown($event)"
+    [value]="editValue"
     #editor>
     </textarea>
 </div>
