--- a/src/app/viewAPI/tabbed-group/tabbed-group.component.html
+++ b/src/app/viewAPI/tabbed-group/tabbed-group.component.html
@@ -1,10 +1,10 @@
 <div class="container">
-    <div class="header" *ngFor="let caption of headersSource | async; let i = index; let last = last; let first = first;">
+    <div class="header"
+        *ngFor="let caption of headersSource | async; let i = index; let last = last; let first = first;">
         <span class="caption" tabIndex="{{i}}" (click)="onHeaderClick($event, i)" [ngClass]="{selected: i === 0}"
-            [toolTip]="'Data acquired:' + timeStamp?.toString()" #header>{{caption}}</span>
+            #header>{{caption}}</span>
         <div class="button-group">
-            <div class="remove" (click)="onTabRemoving($event, i)"
-                *ngIf="!first"
+            <div class="remove" (click)="onTabRemoving($event, i)" *ngIf="!first"
                 [toolTip]="'Click to remove this tab.'">+</div>
             <div *ngIf="allowTabAdding && last" class="add" (click)="onTabAdding($event)"
                 [toolTip]="'Click to add new tab.'">+</div>
